Added game visual controls and compleated the game logic

--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+   <title>Rock,Paper,Scissors</title>
 </head>
 <body>
+
+    <h1 class="result">The result is 0 to 0</h1>
+
+    <div class="container">
+        <div class="rock"><img src="" alt=""><p class="title">Rock</p></div>
+
+        <div class="paper"><img src="" alt=""><p class="title">Paper</p></div>
+
+        <div class="scissors"><img src="" alt=""><p class="title">Scissors</p></div>
+
+    </div>
+
+    <div class="gameSet"></div>
+    
     <script src="js/script.js"></script>
     
 </body>
